[tool.poetry]
name = "maubot"
version = "1.9-b2"
description = "Play Uno with your friends in Telegram chats."
authors = ["Milinuri Nirvalen <pentergust@mail.ru>"]
license = "AGPL-3.0-or-later"
readme = "README.md"


# Dependencies ---------------------------------------------------------

[tool.poetry.dependencies]
python = "^3.11"
loguru = "^0.7"
aiogram = "^3.18"
tortoise-orm = "^0.21.7"
pydantic-settings = "^2.7.1"


# Development dependencies ---------------------------------------------

[tool.poetry.group.dev.dependencies]
ruff = "^0.9"
icecream = "^2.1.3"
telethon = "^1.39.0"
mypy = "^1.15.0"


# Ruff linter ----------------------------------------------------------

[tool.ruff]
line-length = 80
indent-width = 4

# Assume Python 3.10
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "D", "N", "PL", "UP", "ANN", "W", "ASYNC"]
ignore = ["D407", "D107", "D213", "D203"]


# Configure build ------------------------------------------------------

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
